--- a/jatekok.html
+++ b/jatekok.html
@@ -17,26 +17,8 @@
         </header>
         <nav></nav>
         <article>
-            <div id="ttt_div"></div>
-            <div id="kfk_div">
-                <div id="kfk_name">
-                    <h1>Kecske-káposzta-farkas-csónak</h1>
-                    <p>A tutajosnak át kell szállítani a folyó egyik partjáról a másikra egy káposztát, egy kecskét és egy farkast. Ügyelni kell arra, hogy a csónakban csak egyiküknek van hely (a révész evez) és ha a farkas egyedül marad a kecskével, akkor a kecskéből ebéd lesz, illetve ha a kecske egyedül marad a káposztával, akkor annak is lőttek!</p>
-                </div>
-                <div id="bal">
-                    <h2>Bal part</h2>
-                    <p>
-                        <img src="img/kecske.png" alt="kecske">
-                        <img src="img/kaposzta.png" alt="kaposzta">
-                        <img src="img/farkas.png" alt="farkas">
-                    </p>
-                </div>
-                <div id="csonak"></div>
-                <div id="jobb">
-                    <h2>Jobb part</h2>
-                    <p></p>
-                </div>
-            </div>
+            <p>képek, megmutatjuk egy idejig, aztán megmutatjuk melyiket kell megkeresnie, és ha eltalálja kap pontot</p>
+            
         </article>
         <footer></footer>
     </main>
