--- a/jatekok.html
+++ b/jatekok.html
@@ -18,7 +18,7 @@
         <nav></nav>
         <article>
             <p>képek, megmutatjuk egy idejig, aztán megmutatjuk melyiket kell megkeresnie, és ha eltalálja kap pontot</p>
-            
+            <div id="memory_game"></div>
         </article>
         <footer></footer>
     </main>
