--- a/ruha_bemutato.html
+++ b/ruha_bemutato.html
@@ -1,22 +1,84 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
-    <title>Ruha bemutató</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="navbar.css" />
+    <script src="navbar.js" defer></script>
+    <title>Szedlár Krisztina</title>
+    <link rel="icon" href="kepek/logo.ico" />
 </head>
+
 <body>
-    <main>
-        <header>
-            <h1>Ruha bemutató</h1>
-        </header>
-        <nav></nav>
-        <article></article>
-        <aside></aside>
-        <footer></footer>
-    </main>
+    <header class="header">
+        <button class="menu-icon-btn" data-menu-icon-btn>
+        <svg
+          viewbox="0 0 24 24"
+          preserveaspectratio="xMidYMid meet"
+          focusable="false"
+          class="menu-icon"
+        >
+          <g><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path></g>
+        </svg>
+      </button>
+        <h3>#Fenntarthatóság2022</h3>
+    </header>
+    <div class="navbar">
+        <nav class="sidebar" data-sidebar>
+            <div class="top-sidebar">
+                <a href="index.html" class="channel-logo"><img src="https://img.icons8.com/glyph-neue/30/000000/home.png" alt="Channel Logo" /></a>
+                <div class="hidden-sidebar your-channel">###</div>
+                <div class="hidden-sidebar channel-name">Fenntarthatósági témahét</div>
+            </div>
+            <div class="middle-sidebar">
+                <ul class="sidebar-list">
+                    <li class="sidebar-list-item active">
+                        <a href="index.html" class="sidebar-link">
+                            <img src="https://img.icons8.com/glyph-neue/30/000000/home.png" />
+                            <div class="hidden-sidebar">Kezdőlap</div>
+                        </a>
+                    </li>
+                    <li class="sidebar-list-item">
+                        <a href="#" class="sidebar-link">
+                            <img src="https://img.icons8.com/glyph-neue/30/000000/home.png" />
+                            <div class="hidden-sidebar">Menü1 1</div>
+                        </a>
+                    </li>
+                    <li class="sidebar-list-item">
+                        <a href="#" class="sidebar-link">
+                            <img src="https://img.icons8.com/glyph-neue/30/000000/home.png" />
+                            <div class="hidden-sidebar">Menü 2</div>
+                        </a>
+                    </li>
+                    <li class="sidebar-list-item">
+                        <a href="#" class="sidebar-link">
+                            <img src="https://img.icons8.com/glyph-neue/30/000000/home.png" />
+                            <div class="hidden-sidebar">Menü 3</div>
+                        </a>
+                    </li>
+                    <li class="sidebar-list-item">
+                        <a href="#" class="sidebar-link">
+                            <img src="https://img.icons8.com/glyph-neue/30/000000/home.png" />
+                            <div class="hidden-sidebar">Menü 4</div>
+                        </a>
+                    </li>
+                    <li class="sidebar-list-item">
+                        <a href="#" class="sidebar-link">
+                            <img src="https://img.icons8.com/glyph-neue/30/000000/home.png" />
+                            <div class="hidden-sidebar">Menü 5</div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <main class="content">
+
+
+            <footer>&copy; Minden jog fenntartva</footer>
+        </main>
+    </div>
 </body>
+
 </html>
