--- a/tesztek.html
+++ b/tesztek.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
+    <script lang="javascript" src="https://cdn.sheetjs.com/xlsx-0.18.6/package/dist/xlsx.full.min.js"></script>
+    <script src="js/tesztek.js"></script>
     <title>Tesztek</title>
 </head>
 <body>
