memóriajáték kezdete tesztek

--- a/jatekok.html
+++ b/jatekok.html
@@ -17,6 +17,7 @@
         </header>
         <nav></nav>
         <article>
+            <div id="pair_game"></div>
             <p>képek, megmutatjuk egy idejig, aztán megmutatjuk melyiket kell megkeresnie, és ha eltalálja kap pontot</p>
             <div id="memory_game"></div>
         </article>
