--- a/tesztek.html
+++ b/tesztek.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/tesztek.css">
     <script src="main.js"></script>
     <script lang="javascript" src="https://cdn.sheetjs.com/xlsx-0.18.6/package/dist/xlsx.full.min.js"></script>
     <script src="js/tesztek.js"></script>
@@ -16,8 +17,23 @@
             <h1>Tesztek</h1>
         </header>
         <nav></nav>
-        <article></article>
-        <aside></aside>
+        <article>
+            <div id="tests">
+                <div id="test_alt">
+                    <h3>Alsós tesztek</h3>
+                    <div class="tests"></div>
+                </div>
+                <div id="test_koz">
+                    <h3>Középiskolás tesztek</h3>
+                    <div class="tests"></div>
+                </div>
+                <div id="test_fel">
+                    <h3>Felnőtt tesztek</h3>
+                    <div class="tests"></div>
+                </div>
+            </div>
+        </article>
+        <aside>TESZTEREDMÉNYEK:...</aside>
         <footer></footer>
     </main>
 </body>
