teszt lenyílás + szín

--- a/tesztek.html
+++ b/tesztek.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
         </article>
-        <aside>TESZTEREDMÉNYEK:...</aside>
+        <aside><p>Eredmény:</p><p id="eredmeny">...</p></aside>
         <footer></footer>
     </main>
 </body>
