--- a/ruha_bemutato.html
+++ b/ruha_bemutato.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="navbar.css" />
+    <link rel="stylesheet" href="ruha_bemutato.css">
     <script src="navbar.js" defer></script>
+    <script src="ruha_bemutato.js"></script>
     <title>Szedlár Krisztina</title>
-    <link rel="icon" href="kepek/logo.ico" />
+
 </head>
 
 <body>
@@ -74,8 +76,29 @@
             </div>
         </nav>
         <main class="content">
+            <section>
+                <h1>Galéria</h1>
+            </section>
+            <article>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad velit hic aliquid quidem sapiente suscipit esse quibusdam eaque accusantium, recusandae libero amet similique blanditiis sit magni autem. Placeat, facere dicta? Repellat inventore
+                    veritatis non repellendus iste ea saepe ullam sint ab totam, velit maiores eius obcaecati unde at doloribus earum laudantium dignissimos aperiam quod numquam architecto facere? Exercitationem, eaque accusantium.</h3>
+                <div id="kepgaleria">
 
+                </div>
 
+            </article>
+            <img id="myImg" src="ruhakepek/organic.jpg" alt="Snow" style="width:100%;max-width:300px">
+
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+                <span class="close">&times;</span>
+                <h1 id="alkoto"></h1>
+                <img id="fokep" src="" alt="" class="center">
+                <h2 id="cim"></h2>
+                <div id="leiras">
+
+                </div>
+            </div>
             <footer>&copy; Minden jog fenntartva</footer>
         </main>
     </div>
