--- a/tesztek.html
+++ b/tesztek.html
@@ -20,7 +20,7 @@
         <article>
             <div id="tests">
                 <div id="test_alt">
-                    <h3>Alsós tesztek</h3>
+                    <h3>Általános iskolás tesztek</h3>
                     <div class="tests"></div>
                 </div>
                 <div id="test_koz">
