json, mappába rendezés

--- a/galeria/galeria.html
+++ b/galeria/galeria.html
@@ -80,25 +80,27 @@
                 <h1>Galéria</h1>
             </section>
             <article>
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad velit hic aliquid quidem sapiente suscipit esse quibusdam eaque accusantium, recusandae libero amet similique blanditiis sit magni autem. Placeat, facere dicta? Repellat inventore
-                    veritatis non repellendus iste ea saepe ullam sint ab totam, velit maiores eius obcaecati unde at doloribus earum laudantium dignissimos aperiam quod numquam architecto facere? Exercitationem, eaque accusantium.</h3>
-                <div id="kepgaleria">
-
+                <div id="zerokreativnemtudom">
+                    <div>
+                        <a href="zerowaste.html"><img src="ruhakepek/zerowaste.png" alt="zerowaste">
+                            <p>Zero Waste Kollekció</p>
+                        </a>
+                        </img>
+                    </div>
+                    <div>
+                        <a href="kreativkiserletek.html"><img src="ruhakepek/kreativotletek.jpg" alt="kreativkepek">
+                            <p>Kreatív ötletek Kollekció</p>
+                        </a>
+                        </img>
+                    </div>
+                    <div>
+                        <a href="bemutato.html"><img src="ruhakepek/kep.jpg" alt="bemutato">
+                            <p>Divatbemutató Képek</p>
+                        </a>
+                        </img>
+                    </div>
                 </div>
-
             </article>
-            <img id="myImg" src="ruhakepek/organic.jpg" alt="Snow" style="width:100%;max-width:300px">
-
-            <!-- The Modal -->
-            <div id="myModal" class="modal">
-                <span class="close">&times;</span>
-                <h1 id="alkoto"></h1>
-                <img id="fokep" src="" alt="" class="center">
-                <h2 id="cim"></h2>
-                <div id="leiras">
-
-                </div>
-            </div>
             <footer>&copy; Minden jog fenntartva</footer>
         </main>
     </div>
