--- a/cikkek.html
+++ b/cikkek.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/cikkek.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/cikkek.css" />
     <script src="js/cikkek.js"></script>
     <title>Cikkek</title>
-</head>
-<body>
-    <main id="main">
-        <header>
-            <h1>Fenntarthatósági témahét 2022</h1>
-        </header>
-        <nav></nav>
-        <article>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, expedita natus? Consequatur sapiente explicabo cum quaerat minus quia totam dolorem, temporibus veniam earum obcaecati, dolorum vero suscipit eos natus tempore.</article>
-        <aside>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ullam a adipisci facilis aliquam sequi delectus cumque vitae explicabo doloremque excepturi velit libero cum ea totam dolore, est, architecto odio.</aside>
-        <footer></footer>
+  </head>
+  <body>
+    <main>
+      <header>
+        <h1>Fenntarthatósági témahét 2022</h1>
+      </header>
+      <nav></nav>
+      <div id="container">
+        
+      </div>
+      <footer></footer>
     </main>
-</body>
+  </body>
 </html>
