--- a/cikkek.html
+++ b/cikkek.html
@@ -1,23 +1,95 @@
 <!DOCTYPE html>
 <html lang="hu">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="css/cikkek.css" />
+    <script src="navbar.js" defer></script>
     <script src="js/cikkek.js"></script>
     <title>Cikkek</title>
-  </head>
-  <body>
-    <main>
-      <header>
-        <h1>Fenntarthatósági témahét 2022</h1>
-      </header>
-      <nav></nav>
-      <div id="container">
+</head>
+<body>
+    <header>
+        <button class="menu-icon-btn" data-menu-icon-btn>
+        <svg
+          viewbox="0 0 24 24"
+          preserveaspectratio="xMidYMid meet"
+          focusable="false"
+          class="menu-icon">
+          <g><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path></g>
+        </svg>
+      </button>
+        <h3>#Fenntarthatóság2022</h3>
+    </header>
+    <div class="navbar">
+        <nav class="sidebar" data-sidebar>
+            <div class="top-sidebar">
+                <a href="#" class="channel-logo"><img src="https://img.icons8.com/ios-filled/344/news.png" alt="Channel Logo" /></a>
+                <div class="hidden-sidebar your-channel">Cikkek</div>
+                <div class="hidden-sidebar channel-name">Fenntarthatósági témahét</div>
+            </div>
+            <div class="middle-sidebar">
+                <ul class="sidebar-list">
+                    <!-- kezdőlap -->
+                    <li class="sidebar-list-item active">
+                        <a href="index.html" class="sidebar-link">
+                            <img src="https://img.icons8.com/glyph-neue/344/home.png" />
+                            <div class="hidden-sidebar">Kezdőlap</div>
+                        </a>
+                    </li>
+                    <!-- cikkek -->
+                    <!-- <li class="sidebar-list-item">
+                        <a href="cikkek.html" class="sidebar-link">
+                            <img src="https://img.icons8.com/ios-filled/344/news.png" />
+                            <div class="hidden-sidebar">Cikkek</div>
+                        </a>
+                    </li> -->
+                    <!-- tesztek -->
+                    <li class="sidebar-list-item">
+                        <a href="tesztek.html" class="sidebar-link">
+                            <img src="https://img.icons8.com/ios-filled/344/survey.png" />
+                            <div class="hidden-sidebar">Tesztek</div>
+                        </a>
+                    </li>
+                    <!-- ruha bemutató -->
+                    <li class="sidebar-list-item">
+                        <a href="galeria/bemutato.html" class="sidebar-link">
+                            <img src="https://img.icons8.com/ios-filled/344/dress-front-view.png" />
+                            <div class="hidden-sidebar">Ruha bemutató</div>
+                        </a>
+                    </li>
+                    <!-- játékok -->
+                    <li class="sidebar-list-item">
+                        <a href="jatekok.html" class="sidebar-link">
+                            <img src="https://img.icons8.com/ios-filled/344/controller.png" />
+                            <div class="hidden-sidebar">Játékok</div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <main class="content">
+            <button onclick="history.back()">Vissza</button>
+            <section>
+                <h1>Cikkie</h1>
+            </section>
+            <div id="main_content">
+              <div id="container">
         
-      </div>
-      <footer></footer>
-    </main>
-  </body>
+              </div>
+            </div>
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+                <span class="close">&times;</span>
+                <h1 id="alkoto"></h1>
+                <img id="fokep" src="" alt="" class="center">
+                <h2 id="cim"></h2>
+                <div id="leiras"></div>
+            </div>
+            <footer>&copy; Minden jog fenntartva</footer>
+        </main>
+    </div>
+</body>
 </html>
