--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +9,23 @@
     <script src="main.js"></script>
     <title>Fenntarthatósági témahét</title>
 </head>
+
 <body>
-    <main>
-        <header>
-            <h1>Fenntarthatósági témahét 2022</h1>
-        </header>
-        <nav></nav>
-        <article>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, expedita natus? Consequatur sapiente explicabo cum quaerat minus quia totam dolorem, temporibus veniam earum obcaecati, dolorum vero suscipit eos natus tempore.</article>
-        <aside>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ullam a adipisci facilis aliquam sequi delectus cumque vitae explicabo doloremque excepturi velit libero cum ea totam dolore, est, architecto odio.</aside>
-        <footer></footer>
-    </main>
+    <div class="bg-image">
+        <main>
+            <header>
+                <h1>Fenntarthatósági témahét 2022</h1>
+            </header>
+            <nav></nav>
+            <article>
+                <h3>Üdvözöllek a weblapunkon!</h3>
+            </article>
+            <aside>
+                <p>Itt főbb cikkeinket láthatod amik lehetőség szerint érdekesek lennének számodra</p><p>Fentebb a navigációs fülön tudsz navigálni hogy éppen melyik cikkre lennél kíváncsi</p>
+            </aside>
+            <footer></footer>
+        </main>
+    </div>
 </body>
+
 </html>
