--- a/cikkek.html
+++ b/cikkek.html
@@ -25,27 +25,21 @@
     </header>
     <div class="navbar">
         <nav class="sidebar" data-sidebar>
+            <!-- kezdőlap -->
             <div class="top-sidebar">
-                <a href="#" class="channel-logo"><img src="https://img.icons8.com/ios-filled/344/news.png" alt="Channel Logo" /></a>
-                <div class="hidden-sidebar your-channel">Cikkek</div>
+                <a href="index.html" class="channel-logo"><img src="https://img.icons8.com/glyph-neue/344/home.png" alt="Channel Logo" /></a>
+                <div class="hidden-sidebar your-channel">Kezdőlap</div>
                 <div class="hidden-sidebar channel-name">Fenntarthatósági témahét</div>
             </div>
             <div class="middle-sidebar">
                 <ul class="sidebar-list">
-                    <!-- kezdőlap -->
-                    <li class="sidebar-list-item active">
-                        <a href="index.html" class="sidebar-link">
-                            <img src="https://img.icons8.com/glyph-neue/344/home.png" />
-                            <div class="hidden-sidebar">Kezdőlap</div>
-                        </a>
-                    </li>
                     <!-- cikkek -->
-                    <!-- <li class="sidebar-list-item">
+                    <li class="sidebar-list-item">
                         <a href="cikkek.html" class="sidebar-link">
                             <img src="https://img.icons8.com/ios-filled/344/news.png" />
                             <div class="hidden-sidebar">Cikkek</div>
                         </a>
-                    </li> -->
+                    </li>
                     <!-- tesztek -->
                     <li class="sidebar-list-item">
                         <a href="tesztek.html" class="sidebar-link">
@@ -79,14 +73,6 @@
               <div id="container">
         
               </div>
-            </div>
-            <!-- The Modal -->
-            <div id="myModal" class="modal">
-                <span class="close">&times;</span>
-                <h1 id="alkoto"></h1>
-                <img id="fokep" src="" alt="" class="center">
-                <h2 id="cim"></h2>
-                <div id="leiras"></div>
             </div>
             <footer>&copy; Minden jog fenntartva</footer>
         </main>
