--- a/jatekok.html
+++ b/jatekok.html
@@ -25,20 +25,14 @@
     </header>
     <div class="navbar">
         <nav class="sidebar" data-sidebar>
+            <!-- kezdőlap -->
             <div class="top-sidebar">
-                <a href="#" class="channel-logo"><img src="https://img.icons8.com/ios-filled/344/controller.png" alt="Channel Logo" /></a>
-                <div class="hidden-sidebar your-channel">Játékok</div>
+                <a href="index.html" class="channel-logo"><img src="https://img.icons8.com/glyph-neue/344/home.png" alt="Channel Logo" /></a>
+                <div class="hidden-sidebar your-channel">Kezdőlap</div>
                 <div class="hidden-sidebar channel-name">Fenntarthatósági témahét</div>
             </div>
             <div class="middle-sidebar">
                 <ul class="sidebar-list">
-                    <!-- kezdőlap -->
-                    <li class="sidebar-list-item active">
-                        <a href="index.html" class="sidebar-link">
-                            <img src="https://img.icons8.com/glyph-neue/344/home.png" />
-                            <div class="hidden-sidebar">Kezdőlap</div>
-                        </a>
-                    </li>
                     <!-- cikkek -->
                     <li class="sidebar-list-item">
                         <a href="cikkek.html" class="sidebar-link">
@@ -61,33 +55,26 @@
                         </a>
                     </li>
                     <!-- játékok -->
-                    <!-- <li class="sidebar-list-item">
+                    <li class="sidebar-list-item">
                         <a href="jatekok.html" class="sidebar-link">
                             <img src="https://img.icons8.com/ios-filled/344/controller.png" />
                             <div class="hidden-sidebar">Játékok</div>
                         </a>
-                    </li> -->
+                    </li>
                 </ul>
             </div>
         </nav>
-        <main class="content">
+        <main>
             <button onclick="history.back()">Vissza</button>
             <section>
                 <h1>Játékok</h1>
             </section>
             <div id="main_content">
                 <article>
+                    <!-- ruhaképek -->
                     <div id="pair_game"></div>
                     <div id="memory_game"></div>
                 </article>
-            </div>
-            <!-- The Modal -->
-            <div id="myModal" class="modal">
-                <span class="close">&times;</span>
-                <h1 id="alkoto"></h1>
-                <img id="fokep" src="" alt="" class="center">
-                <h2 id="cim"></h2>
-                <div id="leiras"></div>
             </div>
             <footer>&copy; Minden jog fenntartva</footer>
         </main>
