--- a/tesztek.html
+++ b/tesztek.html
@@ -26,20 +26,14 @@
     </header>
     <div class="navbar">
         <nav class="sidebar" data-sidebar>
+            <!-- kezdőlap -->
             <div class="top-sidebar">
-                <a href="#" class="channel-logo"><img src="https://img.icons8.com/ios-filled/344/survey.png" alt="Channel Logo" /></a>
-                <div class="hidden-sidebar your-channel">Tesztek</div>
+                <a href="index.html" class="channel-logo"><img src="https://img.icons8.com/glyph-neue/344/home.png" alt="Channel Logo" /></a>
+                <div class="hidden-sidebar your-channel">Kezdőlap</div>
                 <div class="hidden-sidebar channel-name">Fenntarthatósági témahét</div>
             </div>
             <div class="middle-sidebar">
                 <ul class="sidebar-list">
-                    <!-- kezdőlap -->
-                    <li class="sidebar-list-item active">
-                        <a href="index.html" class="sidebar-link">
-                            <img src="https://img.icons8.com/glyph-neue/344/home.png" />
-                            <div class="hidden-sidebar">Kezdőlap</div>
-                        </a>
-                    </li>
                     <!-- cikkek -->
                     <li class="sidebar-list-item">
                         <a href="cikkek.html" class="sidebar-link">
@@ -48,12 +42,12 @@
                         </a>
                     </li>
                     <!-- tesztek -->
-                    <!-- <li class="sidebar-list-item">
+                    <li class="sidebar-list-item">
                         <a href="tesztek.html" class="sidebar-link">
                             <img src="https://img.icons8.com/ios-filled/344/survey.png" />
                             <div class="hidden-sidebar">Tesztek</div>
                         </a>
-                    </li> -->
+                    </li>
                     <!-- ruha bemutató -->
                     <li class="sidebar-list-item">
                         <a href="galeria/bemutato.html" class="sidebar-link">
@@ -71,13 +65,15 @@
                 </ul>
             </div>
         </nav>
-        <main class="content">
+        <main>
             <button onclick="history.back()">Vissza</button>
             <section>
                 <h1>Tesztek</h1>
             </section>
             <div id="main_content">
                 <article>
+                    <!-- szín -->
+                    <!-- no fekete keret -->
                     <div id="tests">
                         <div id="test_alt">
                             <h3>Általános iskolás tesztek</h3>
@@ -96,14 +92,6 @@
                 <aside>
                     <div id="resoult"><p>Eredmény:</p><p class="text">...</p></div>
                 </aside>
-            </div>
-            <!-- The Modal -->
-            <div id="myModal" class="modal">
-                <span class="close">&times;</span>
-                <h1 id="alkoto"></h1>
-                <img id="fokep" src="" alt="" class="center">
-                <h2 id="cim"></h2>
-                <div id="leiras"></div>
             </div>
             <footer>&copy; Minden jog fenntartva</footer>
         </main>
