css container div alakítás + js apróbb javítások illetve megjelenit function alap

--- a/cikkek.html
+++ b/cikkek.html
@@ -73,7 +73,7 @@
         <main class="content">
             <button onclick="history.back()">Vissza</button>
             <section>
-                <h1>Cikkie</h1>
+                <h1>Cikkek</h1>
             </section>
             <div id="main_content">
               <div id="container">
