html id="aktualiscikk" js $2("#container > div")

--- a/cikkek.html
+++ b/cikkek.html
@@ -73,6 +73,9 @@
               <div id="container">
         
               </div>
+              <div id="aktualiscikk">
+                
+              </div>
             </div>
             <footer>&copy; Minden jog fenntartva</footer>
         </main>
