--- a/tesztek.html
+++ b/tesztek.html
@@ -66,6 +66,9 @@
             </div>
         </nav>
         <main>
+            <!-- <div>
+                <a onclick="history.back()" class="arrow left"></a>
+            </div> -->
             <button onclick="history.back()">Vissza</button>
             <section>
                 <h1>Tesztek</h1>
