--- a/jatekok.html
+++ b/jatekok.html
@@ -49,7 +49,7 @@
                     </li>
                     <!-- ruha bemutató -->
                     <li class="sidebar-list-item">
-                        <a href="galeria/bemutato.html" class="sidebar-link">
+                        <a href="galeria/galeria.html" class="sidebar-link">
                             <img src="https://img.icons8.com/ios-filled/344/dress-front-view.png" />
                             <div class="hidden-sidebar">Ruha bemutató</div>
                         </a>
