navbar, tesztek, játékok, stuff into js, ...

--- a/tesztek.html
+++ b/tesztek.html
@@ -12,18 +12,7 @@
     <title>Tesztek</title>
 </head>
 <body>
-    <header>
-        <button class="menu-icon-btn" data-menu-icon-btn>
-        <svg
-          viewbox="0 0 24 24"
-          preserveaspectratio="xMidYMid meet"
-          focusable="false"
-          class="menu-icon">
-          <g><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path></g>
-        </svg>
-      </button>
-        <h3>#Fenntarthatóság2022</h3>
-    </header>
+    <header></header>
     <div class="navbar">
         <nav class="sidebar" data-sidebar></nav>
         <main>
@@ -52,7 +41,7 @@
                     <div id="resoult"><p>Eredmény:</p><p class="text">...</p></div>
                 </aside>
             </div>
-            <footer>&copy; Minden jog fenntartva</footer>
+            <footer></footer>
         </main>
     </div>
 </body>
