--- a/galeria/kreativkiserletek.html
+++ b/galeria/kreativkiserletek.html
@@ -14,19 +14,7 @@
 </head>
 
 <body>
-    <header class="header">
-        <button class="menu-icon-btn" data-menu-icon-btn>
-        <svg
-          viewbox="0 0 24 24"
-          preserveaspectratio="xMidYMid meet"
-          focusable="false"
-          class="menu-icon"
-        >
-          <g><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path></g>
-        </svg>
-      </button>
-        <h3>#Fenntarthatóság2022</h3>
-    </header>
+    <header></header>
     <div class="navbar">
         <nav class="sidebar" data-sidebar></nav>
         <main class="content">
@@ -54,7 +42,7 @@
 
                 </div>
             </div>
-            <footer>&copy; Minden jog fenntartva</footer>
+            <footer></footer>
         </main>
     </div>
 </body>
